--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -13,7 +13,7 @@ jobs:
     name: Sync latest commits from upstream repo
     outputs:
       status: ${{ steps.sync.outputs.has_new_commits }}
-      tag:   ${{ steps.tag.outputs.tag }}
+      tag:   ${{ steps.lastesttag.outputs.tag }}
     steps:
     # REQUIRED step
     # Step 1: run a standard checkout action, provided by github
@@ -25,7 +25,8 @@ jobs:
         ref:  master
         # REQUIRED if your upstream repo is private (see wiki)
         persist-credentials: false
-
+        fetch-depth: 0 
+        
     # REQUIRED step
     # Step 2: run the sync action
     - name: Sync upstream changes
@@ -41,14 +42,20 @@ jobs:
 
     # Step 3: Publish with tag.
     - name: Bump version and push tag
-      id: tag
       if: steps.sync.outputs.has_new_commits == 'true'
       uses: anothrNick/github-tag-action@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
         DEFAULT_BUMP: patch
-
+        
+    # Step 4: Get Latest tag
+    - name: 'Get Latest tag'
+      id: lastesttag
+      uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      with:
+        fallback: '' # Optional fallback tag to use when no tag can be found
+        
   linux-windows-build:
     name: CSharp Build
     #if: startsWith( github.ref, 'refs/tags/v')
